--- a/styles.css
+++ b/styles.css
@@ -95,10 +95,17 @@ a:hover {
 
 .gallery-container{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
+    grid-gap: 5rem;
+    align-items: center;
   grid-template-rows: auto 2rem auto; 
   column-gap: 20px;
-  row-gap: 15px;
+  row-gap: 20px;
+
+}
+.cards{
+  max-width: 300px;
+  align-items: center;
 }
 
 /* Testimonials*/
@@ -143,8 +150,11 @@ footer {
 
 /* Media Query */
 
-@media screen and (max-width:1370px) {
+@media screen and (max-width:1300px) {
  
+  h1{
+    display: none;
+  }
    header {
       margin: 0;
       text-align: center;
@@ -156,9 +166,13 @@ footer {
       flex-direction: column;
     }
 
+    .gallery-container {
+      display: flex;
+      flex-flow: row wrap;
+    }
+
   .cards {
-    display: flex;
-    flex flow: row wrap;
+      width: 350px;
   }
   @media screen and (max-width: 800px) {
     .gallery-container {
